# terebinth-cpp

./: .clang-format  .gitignore  .mailmap  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: c-cpp.yml  cmake.yml
apps/: CMakeLists.txt  main.cpp
cmake/: CMakeLists.txt  general-cmake.cmake  terebinth-api.cmake  terebinth-config.cmake.in
examples/cmake/: CMakeLists.txt
include/: VERSION.h  action.h  all_operators.h  ast_node.h  cpp_program.h  error_handler.h  namespace.h  operator.h  source_file.h  stack_frame.h  terebinth_program.h  token.h  type.h
include/util/: file_utils.h  string_drawing.h  string_num_conversion.h  string_utils.h
modules/: Version.cppm.in  Version.ixx.in  action.cppm  action.ixx  all_operators.ixx  ast_node.ixx  cpp_program.ixx  error_handler.ixx  namespace.cppm  namespace.ixx  operator.cppm  operator.ixx  source_file.ixx  stack_frame.ixx  terebinth_program.ixx  token.cppm  token.ixx  type.cppm  type.ixx
modules/util/: file_utils.cppm  file_utils.ixx  string_array.cppm  string_array.ixx  string_drawing.cppm  string_drawing.ixx  string_num_conversion.ixx  string_utils.cppm  string_utils.ixx  util.cppm  util.ixx
src/: CMakeLists.txt
src/terebinth/: CMakeLists.txt  VERSION.h  Version.in.h  action.h  all_operators.cpp  all_operators.h  ast_node.cpp  ast_node.h  cpp_program.cpp  cpp_program.h  error_handler.cpp  error_handler.h  file_utils.cpp  file_utils.h  lexer.cpp  main.cpp  namespace.cpp  namespace.h  operator.h  parser.cpp  resolve_literal.cpp  source_file.cpp  stack_frame.cpp  stack_frame.h  string_array.cpp  string_num_conversion.cpp  string_utils.cpp  string_utils.h  terebinth_program.cpp  terebinth_program.h  terebinth_stdlib.cpp  token.cpp  token.h  type.cpp  type.h
src/terebinth/actions/: CMakeLists.txt  action.cpp  bool_op_action.cpp  branch_action.cpp  function_action.cpp  if_action.cpp  list_action.cpp  loop_action.cpp  make_tuple_action.cpp  type_action.cpp  var_action.cpp
src/terebinth/util/: CMakeLists.txt  file_utils.cpp  file_utils.h  string_array.cpp  string_array.h  string_drawing.cpp  string_num_conversion.cpp  string_utils.cpp
util/: file_utils.cpp  string_array.h  string_drawing.h  string_utils.cpp
