add_subdirectory(actions)

set(terebinth_sources
    all_operators.cpp
    ast_node.cpp
    cpp_program.cpp
    error_handler.cpp
    lexer.cpp
    main.cpp
    namespace.cpp
    parser.cpp
    resolve_literal.cpp
    source_file.cpp
    stack_frame.cpp
    terebinth_program.cpp
    terebinth_stdlib.cpp
    token.cpp
    type.cpp
)